Add release number upon ppa build.
Fix alpine build